sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_depart_false/errors.duarouter
Error: Attribute 'depart' in definition of vehicle '1' is not an int.
Quitting (on error).
